# IFT630_TP1

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Canal.h  CartConstants.h  CartMonitor.h  CartSemaphore.h  Makefile  Philosopher.h  PhilosopherConstants.h  PhilosopherMonitor.h  PhilosopherSemaphore.h  README.md  Random.h  cmake_install.cmake  devoir1.cpp  devoir2.cpp  devoir3.cpp  devoir4.cpp  moniteur.h  philosopher.h  semaphore.h
